fix collapsing margin

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,6 +74,7 @@ h2.section-header {
 
 .articles-list .post {
     display: block;
+    overflow: hidden;
     border-top: 1px solid #ddd;
     padding: 14px 0 12px;
 }
